add to my repository

--- a/admin/slides.html
+++ b/admin/slides.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Newsletter</title>
+    <title>Slides</title>
 
     <!--css-->
     <link rel="stylesheet" href="../asset/css/style.css">
@@ -26,6 +26,7 @@
 <body>
 
     <!-- Admin header -->
+
     <header class="header-admin">
         <div>
             <h2>Dashboard</h2>
@@ -51,11 +52,11 @@
                     <i class="fa-solid fa-socks"></i>
                     <span>Shoes</span>
                 </a>
-                <a class="activ" href="#">
+                <a href="newsletter.html">
                     <i class="bi bi-card-text"></i>
                     <span>Newsletter</span>
                 </a>
-                <a href="slides.html">
+                <a class="activ" href="#">
                     <i class="bi bi-file-image"></i>
                     <span>Slides</span>
                 </a>
@@ -69,21 +70,17 @@
                 </a>
             </nav>
         </div>
-        <div class="second-bloc">
-            <div class="newsletter-form">
-                <form action="">
-                    <h3>Newsletter</h3>
-                    <div class="all-inputs">
-                        <input type="text" placeholder="Message title">
-                    </div>
-                    <div>
-                        <textarea name="" id="" placeholder="Message..."></textarea>
-                    </div>
 
-                    <div class="submit">
-                        <input type="submit" value="Send message">
+        <div class="second-bloc">
+            <div class="slide-details">
+                <div class="add-slide">
+                    <a href="#">Add a slide</a>
+                </div>
+                <div class="slide-items">
+                    <div>
+
                     </div>
-                </form>
+                </div>
             </div>
         </div>
     </section>
