--- a/admin/shipment.html
+++ b/admin/shipment.html
@@ -55,7 +55,7 @@
                     <i class="bi bi-card-text"></i>
                     <span>Newsletter</span>
                 </a>
-                <a href="#">
+                <a href="slides.html">
                     <i class="bi bi-file-image"></i>
                     <span>Slides</span>
                 </a>
