--- a/admin/slides.html
+++ b/admin/slides.html
@@ -78,7 +78,28 @@
                 </div>
                 <div class="slide-items">
                     <div>
-
+                        <p><img src="../asset/images/bg-1.jpg" alt=""></p>
+                        <i class="bi bi-trash3"></i>
+                    </div>
+                    <div>
+                        <p><img src="../asset/images/bg-1.jpg" alt=""></p>
+                        <i class="bi bi-trash3"></i>
+                    </div>
+                    <div>
+                        <p><img src="../asset/images/bg-3.jpeg" alt=""></p>
+                        <i class="bi bi-trash3"></i>
+                    </div>
+                    <div>
+                        <p><img src="../asset/images/bg-4.jpeg" alt=""></p>
+                        <i class="bi bi-trash3"></i>
+                    </div>
+                    <div>
+                        <p><img src="../asset/images/bg-5.jpeg" alt=""></p>
+                        <i class="bi bi-trash3"></i>
+                    </div>
+                    <div>
+                        <p><img src="../asset/images/bg-6.jpeg" alt=""></p>
+                        <i class="bi bi-trash3"></i>
                     </div>
                 </div>
             </div>
