add to my repository

--- a/admin/slides.html
+++ b/admin/slides.html
@@ -101,6 +101,18 @@
                         <p><img src="../asset/images/bg-6.jpeg" alt=""></p>
                         <i class="bi bi-trash3"></i>
                     </div>
+                    <div>
+                        <p><img src="../asset/images/bg-4.jpeg" alt=""></p>
+                        <i class="bi bi-trash3"></i>
+                    </div>
+                    <div>
+                        <p><img src="../asset/images/bg-5.jpeg" alt=""></p>
+                        <i class="bi bi-trash3"></i>
+                    </div>
+                    <div>
+                        <p><img src="../asset/images/bg-6.jpeg" alt=""></p>
+                        <i class="bi bi-trash3"></i>
+                    </div>
                 </div>
             </div>
         </div>
