add to my repository

--- a/admin/addslide.html
+++ b/admin/addslide.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Slides</title>
+    <title>Newsletter</title>
 
     <!--css-->
     <link rel="stylesheet" href="../asset/css/style.css">
@@ -26,7 +26,6 @@
 <body>
 
     <!-- Admin header -->
-
     <header class="header-admin">
         <div>
             <h2>Dashboard</h2>
@@ -52,7 +51,7 @@
                     <i class="fa-solid fa-socks"></i>
                     <span>Shoes</span>
                 </a>
-                <a href="newsletter.html">
+                <a href="#">
                     <i class="bi bi-card-text"></i>
                     <span>Newsletter</span>
                 </a>
@@ -70,50 +69,18 @@
                 </a>
             </nav>
         </div>
-
         <div class="second-bloc">
-            <div class="slide-details">
-                <div class="add-slide">
-                    <a href="addslide.html">Add a slide</a>
-                </div>
-                <div class="slide-items">
-                    <div>
-                        <p><img src="../asset/images/bg-1.jpg" alt=""></p>
-                        <i class="bi bi-trash3"></i>
+            <div class="newsletter-form">
+                <form action="">
+                    <h3>Add a slide</h3>
+                    <div class="all-inputs">
+                        <input type="file">
                     </div>
-                    <div>
-                        <p><img src="../asset/images/bg-1.jpg" alt=""></p>
-                        <i class="bi bi-trash3"></i>
+
+                    <div class="submit">
+                        <input type="submit" value="Send message">
                     </div>
-                    <div>
-                        <p><img src="../asset/images/bg-3.jpeg" alt=""></p>
-                        <i class="bi bi-trash3"></i>
-                    </div>
-                    <div>
-                        <p><img src="../asset/images/bg-4.jpeg" alt=""></p>
-                        <i class="bi bi-trash3"></i>
-                    </div>
-                    <div>
-                        <p><img src="../asset/images/bg-5.jpeg" alt=""></p>
-                        <i class="bi bi-trash3"></i>
-                    </div>
-                    <div>
-                        <p><img src="../asset/images/bg-6.jpeg" alt=""></p>
-                        <i class="bi bi-trash3"></i>
-                    </div>
-                    <div>
-                        <p><img src="../asset/images/bg-4.jpeg" alt=""></p>
-                        <i class="bi bi-trash3"></i>
-                    </div>
-                    <div>
-                        <p><img src="../asset/images/bg-5.jpeg" alt=""></p>
-                        <i class="bi bi-trash3"></i>
-                    </div>
-                    <div>
-                        <p><img src="../asset/images/bg-6.jpeg" alt=""></p>
-                        <i class="bi bi-trash3"></i>
-                    </div>
-                </div>
+                </form>
             </div>
         </div>
     </section>
