--- a/admin/addslide.html
+++ b/admin/addslide.html
@@ -51,7 +51,7 @@
                     <i class="fa-solid fa-socks"></i>
                     <span>Shoes</span>
                 </a>
-                <a href="#">
+                <a href="newsletter.html">
                     <i class="bi bi-card-text"></i>
                     <span>Newsletter</span>
                 </a>
@@ -59,7 +59,7 @@
                     <i class="bi bi-file-image"></i>
                     <span>Slides</span>
                 </a>
-                <a href="#">
+                <a href="orders.html">
                     <i class="bi bi-border"></i>
                     <span>Orders</span>
                 </a>
