--- a/admin/newsletter.html
+++ b/admin/newsletter.html
@@ -59,7 +59,7 @@
                     <i class="bi bi-file-image"></i>
                     <span>Slides</span>
                 </a>
-                <a href="#">
+                <a href="orders.html">
                     <i class="bi bi-border"></i>
                     <span>Orders</span>
                 </a>
