--- a/admin/orders.html
+++ b/admin/orders.html
@@ -59,11 +59,11 @@
                     <i class="bi bi-file-image"></i>
                     <span>Slides</span>
                 </a>
-                <a href="orders.html">
+                <a class="activ" href="#">
                     <i class="bi bi-border"></i>
                     <span>Orders</span>
                 </a>
-                <a class="activ" href="#">
+                <a href="shipment.html">
                     <i class="bi bi-flower2"></i>
                     <span>Shipment</span>
                 </a>
