--- a/admin/slides.html
+++ b/admin/slides.html
@@ -60,7 +60,7 @@
                     <i class="bi bi-file-image"></i>
                     <span>Slides</span>
                 </a>
-                <a href="#">
+                <a href="orders.html">
                     <i class="bi bi-border"></i>
                     <span>Orders</span>
                 </a>
