add to my repository

--- a/admin/orders.html
+++ b/admin/orders.html
@@ -70,7 +70,7 @@
             </nav>
         </div>
         <div class="second-bloc">
-            <div class="shipment">
+            <div class="ship">
                 <div class="date">
                     <span>August 20, 2024</span>
                 </div>
@@ -126,7 +126,7 @@
                 </div>
             </div>
 
-            <div class="shipment">
+            <div class="ship">
                 <div class="date">
                     <span>August 20, 2024</span>
                 </div>
@@ -182,7 +182,7 @@
                 </div>
             </div>
 
-            <div class="shipment">
+            <div class="ship">
                 <div class="date">
                     <span>August 20, 2024</span>
                 </div>
@@ -238,7 +238,7 @@
                 </div>
             </div>
 
-            <div class="shipment">
+            <div class="ship">
                 <div class="date">
                     <span>August 20, 2024</span>
                 </div>
@@ -294,7 +294,7 @@
                 </div>
             </div>
 
-            <div class="shipment">
+            <div class="ship">
                 <div class="date">
                     <span>August 20, 2024</span>
                 </div>
