--- a/admin/shipment.html
+++ b/admin/shipment.html
@@ -47,7 +47,7 @@
                     <i class="bi bi-bookmark-star"></i>
                     <span>Categories</span>
                 </a>
-                <a href="#">
+                <a href="shoes.html">
                     <i class="fa-solid fa-socks"></i>
                     <span>Shoes</span>
                 </a>
