--- a/admin/shoes.html
+++ b/admin/shoes.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard</title>
+    <title>Shoes</title>
 
     <!--css-->
     <link rel="stylesheet" href="../asset/css/style.css">
@@ -40,7 +40,7 @@
     <section class="admin-section">
         <div class="first-bloc">
             <nav>
-                <a class="activ" href="#">
+                <a href="admin.html">
                     <i class="bi bi-clipboard-pulse"></i>
                     <span>Dashboard</span>
                 </a>
@@ -56,7 +56,7 @@
                     <i class="bi bi-card-text"></i>
                     <span>Newsletter</span>
                 </a>
-                <a href="slides.html">
+                <a class="activ" href="#">
                     <i class="bi bi-file-image"></i>
                     <span>Slides</span>
                 </a>
@@ -70,36 +70,9 @@
                 </a>
             </nav>
         </div>
+
         <div class="second-bloc">
-            <div class="all-items">
-                <div class="bloc-content">
-                    <div>
-                        <i class="bi bi-people"></i>
-                        <p>Users</p>
-                        <span>207</span>
-                    </div>
-                    <div>
-                        <i class="bi bi-bookmark-star"></i>
-                        <p>Categories</p>
-                        <span>123</span>
-                    </div>
-                    <div>
-                        <i class="bi bi-people"></i>
-                        <p>Shoes</p>
-                        <span>509</span>
-                    </div>
-                    <div>
-                        <i class="bi bi-border"></i>
-                        <p>Orders</p>
-                        <span>20</span>
-                    </div>
-                    <div>
-                        <i class="bi bi-flower2"></i>
-                        <p>Shipment</p>
-                        <span>184</span>
-                    </div>
-                </div>
-            </div>
+
         </div>
     </section>
 
