add to my repository

--- a/admin/shoes.html
+++ b/admin/shoes.html
@@ -48,7 +48,7 @@
                     <i class="bi bi-bookmark-star"></i>
                     <span>Categories</span>
                 </a>
-                <a href="shoes.html">
+                <a class="activ" href="#">
                     <i class="fa-solid fa-socks"></i>
                     <span>Shoes</span>
                 </a>
@@ -56,7 +56,7 @@
                     <i class="bi bi-card-text"></i>
                     <span>Newsletter</span>
                 </a>
-                <a class="activ" href="#">
+                <a href="slides.html">
                     <i class="bi bi-file-image"></i>
                     <span>Slides</span>
                 </a>
@@ -72,7 +72,80 @@
         </div>
 
         <div class="second-bloc">
-
+            <div style="margin-bottom: 30px;" class="prod-container">
+                <div class="prod-item">
+                    <p><img src="../asset/images/product/prod-1.png" alt=""></p>
+                    <div class="item">
+                        <div class="item-details">
+                            <p>Jordan 1</p>
+                            <span>20$</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="prod-item">
+                    <p><img src="../asset/images/product/prod-2.png" alt=""></p>
+                    <div class="item">
+                        <div class="item-details">
+                            <p>Jordan 1</p>
+                            <span>20$</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="prod-item">
+                    <p><img src="../asset/images/product/prod-3.png" alt=""></p>
+                    <div class="item">
+                        <div class="item-details">
+                            <p>Jordan 1</p>
+                            <span>20$</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="prod-item">
+                    <p><img src="../asset/images/product/prod-4.png" alt=""></p>
+                    <div class="item">
+                        <div class="item-details">
+                            <p>Jordan 1</p>
+                            <span>20$</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="prod-item">
+                    <p><img src="../asset/images/product/prod-5.png" alt=""></p>
+                    <div class="item">
+                        <div class="item-details">
+                            <p>Jordan 1</p>
+                            <span>20$</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="prod-item">
+                    <p><img src="../asset/images/product/prod-6.png" alt=""></p>
+                    <div class="item">
+                        <div class="item-details">
+                            <p>Jordan 1</p>
+                            <span>20$</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="prod-item">
+                    <p><img src="../asset/images/product/prod-7.png" alt=""></p>
+                    <div class="item">
+                        <div class="item-details">
+                            <p>Jordan 1</p>
+                            <span>20$</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="prod-item">
+                    <p><img src="../asset/images/product/prod-8.png" alt=""></p>
+                    <div class="item">
+                        <div class="item-details">
+                            <p>Jordan 1</p>
+                            <span>20$</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
