--- a/admin/slides.html
+++ b/admin/slides.html
@@ -74,7 +74,7 @@
         <div class="second-bloc">
             <div class="slide-details">
                 <div class="add-slide">
-                    <a href="addslide.html">Add a slide</a>
+                    <a href="#">Add a slide</a>
                 </div>
                 <div class="slide-items">
                     <div>
@@ -98,19 +98,7 @@
                         <i class="bi bi-trash3"></i>
                     </div>
                     <div>
-                        <p><img src="../asset/images/bg-6.jpeg" alt=""></p>
-                        <i class="bi bi-trash3"></i>
-                    </div>
-                    <div>
-                        <p><img src="../asset/images/bg-4.jpeg" alt=""></p>
-                        <i class="bi bi-trash3"></i>
-                    </div>
-                    <div>
-                        <p><img src="../asset/images/bg-5.jpeg" alt=""></p>
-                        <i class="bi bi-trash3"></i>
-                    </div>
-                    <div>
-                        <p><img src="../asset/images/bg-6.jpeg" alt=""></p>
+                        <p><img src="../asset/images/bg-1.jpg" alt=""></p>
                         <i class="bi bi-trash3"></i>
                     </div>
                 </div>
