add to my repository

--- a/admin/shoes.html
+++ b/admin/shoes.html
@@ -72,6 +72,9 @@
         </div>
 
         <div class="second-bloc">
+            <div class="add-shoes">
+                <a href="#">Add a shoes</a>
+            </div>
             <div style="margin-bottom: 30px;" class="prod-container">
                 <div class="prod-item">
                     <p><img src="../asset/images/product/prod-1.png" alt=""></p>
