add to my repository

--- a/admin/addshoes.html
+++ b/admin/addshoes.html
@@ -74,11 +74,32 @@
                 <form action="">
                     <h3>Add a slide</h3>
                     <div class="all-inputs">
+                        <input type="name" placeholder="Shoes name">
+                    </div>
+                    <div class="all-inputs">
+                        <input type="name" placeholder="Shoes Price">
+                    </div>
+                    <div class="all-inputs">
+                        <input type="name" placeholder="Shoes description">
+                    </div>
+                    <select name="" id="">
+                        <option value="">Select shoes categories</option>
+                        <option value="">Men</option>
+                        <option value="">Wemen</option>
+                        <option value="">Children</option>
+                    </select>
+                    <select name="" id="">
+                        <option value="">Select types</option>
+                        <option value="">Air force</option>
+                        <option value="">Jordan</option>
+                        <option value="">Samba</option>
+                    </select>
+                    <div class="all-inputs">
                         <input type="file">
                     </div>
 
                     <div class="submit">
-                        <input type="submit" value="Add slide">
+                        <input type="submit" value="Add shoes">
                     </div>
                 </form>
             </div>
