--- a/admin/shoes.html
+++ b/admin/shoes.html
@@ -73,7 +73,7 @@
 
         <div class="second-bloc">
             <div class="add-shoes">
-                <a href="#">Add a shoes</a>
+                <a href="addshoes.html">Add a shoes</a>
             </div>
             <div style="margin-bottom: 30px;" class="prod-container">
                 <div class="prod-item">
