--- a/admin/slides.html
+++ b/admin/slides.html
@@ -44,7 +44,7 @@
                     <i class="bi bi-clipboard-pulse"></i>
                     <span>Dashboard</span>
                 </a>
-                <a href="#">
+                <a href="admincategorie.html">
                     <i class="bi bi-bookmark-star"></i>
                     <span>Categories</span>
                 </a>
