add to my repository

--- a/admin/admincategorie.html
+++ b/admin/admincategorie.html
@@ -81,6 +81,15 @@
                         <button><i class="bi bi-trash3"></i></button>
                     </div>
                 </div>
+                <div class="categorie-item">
+                    <h3>Lorem ipsum dolor sit.</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus quaerat molestias, dignissimos recusandae quidem eos velit tempore dolore quas saepe placeat cupiditate, eveniet ullam quae mollitia at, delectus ad reiciendis sequi
+                        odit voluptatibus pariatur illum. Fugit suscipit excepturi ullam omnis laborum corporis eos aspernatur magnam.</p>
+                    <div>
+                        <a href="#"><i class="bi bi-pen"></i></a>
+                        <button><i class="bi bi-trash3"></i></button>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
