--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
                     <a class="panier" href="#"><i class="bi bi-cart"></i></a>
                     <span>08</span>
                 </div>
+                <div>
+                    <i class="bi bi-circle-fill status-indicator"></i>
+                </div>
             </div>
         </div>
     </header>
