add to my repository

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <a class="panier" href="#"><i class="bi bi-cart"></i></a>
                     <span>08</span>
                 </div>
-                <div>
+                <div class="indicator">
                     <i class="bi bi-circle-fill status-indicator"></i>
                 </div>
             </div>
