add to my repository

--- a/index.html
+++ b/index.html
@@ -41,7 +41,25 @@
                     <span>08</span>
                 </div>
                 <div class="indicator">
-                    <i class="bi bi-circle-fill status-indicator"></i>
+                    <i class="bi bi-chat-right-dots"></i>
+                    <div class="dashboard-user">
+                        <a class="act" href="#">
+                            <i class="bi bi-clipboard-pulse"></i>
+                            <span>Dashboard</span>
+                        </a>
+                        <a href="profil.html">
+                            <i class="bi bi-person-check"></i>
+                            <span>My profile</span>
+                        </a>
+                        <a href="#">
+                            <i class="bi bi-credit-card-2-front"></i>
+                            <span>Payment</span>
+                        </a>
+                        <a href="#">
+                            <i class="bi bi-box-arrow-in-right"></i>
+                            <span>Log out</span>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
