--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <span>08</span>
                 </div>
                 <div class="indicator">
-                    <i class="bi bi-chat-right-dots"></i>
+                    <i class="bi indic bi-chat-right-dots"></i>
                     <div class="dashboard-user">
                         <a class="act" href="#">
                             <i class="bi bi-clipboard-pulse"></i>
