add to my repository

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
                     <span>08</span>
                 </div>
                 <div class="indicator">
-                    <i class="bi indic bi-chat-right-dots"></i>
+                    <i class="bi bi-chat-right-dots"></i>
                     <div class="dashboard-user">
-                        <a class="act" href="#">
+                        <a href="#">
                             <i class="bi bi-clipboard-pulse"></i>
                             <span>Dashboard</span>
                         </a>
