add to my repository

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <div class="indicator">
                     <i class="bi bi-chat-right-dots"></i>
                     <div class="dashboard-user">
-                        <a href="#">
+                        <a href="dashboard.html">
                             <i class="bi bi-clipboard-pulse"></i>
                             <span>Dashboard</span>
                         </a>
